History of this buildout
========================

6.0.5 (unreleased)
------------------

- varnish-clearcache: print if there is a failure.  [maurits]

- varnishd: listen on telnet.  [maurits]


6.0.4 (2016-03-02)
------------------

- Cook css/javascript resources in an upgrade step.  [maurits]

- Added varnish-clearcache part on deployment.  [maurits]


6.0.3 (2016-03-02)
------------------

- IE11 Flex fix, for all big browsers.
  [lhuiskes]

- Use latest eea.facetednavigation 8.8 and eea.jquery 8.7.  Added
  upgrade step for this.  [maurits]


6.0.2 (2016-02-29)
------------------

- Let /zoeken in the Zope root redirect back to /zoeken on the Plone
  Site.  [maurits]


6.0.1 (2016-02-29)
------------------

- Use Products.GenericSetup 1.8.2.  I wanted it for the nicer UI, but
  there is a more important feature: we need 1.7.6 or higher because
  we are using a recent setuptools.  That could give a wrong sort
  order in upgrade steps.  [maurits]

- Fixed DateTime error calculating 29 February plus 1 year.  [maurits]

- Make internal releases:
  eea.facetednavigation = 8.7+zest.1
  plone.app.imagecropping = 1.3+zest.1
  [maurits]

- Upgrade plone.app.jquery and jquerytools in beginning of migration.
  [maurits]


6.0.0 (2016-02-29)
------------------

- Add quintagroup.seoptimizer.  [jladage]

- Fix image paths after moving to cssregistry.  [jladage]

- Fix links after moving /documenten to /zoeken.  [jladage]

- Changed the path at which we load fonts.  [maurits]

- Use much newer zc.buildout, setuptools and bootstrap.py versions.
  You need to run python2.7 bootstrap.py.  [maurits]

- Updated to plone.recipe.varnish 4.  MINA-117.  [maurits]

- Fixed caching configs to point to pr-3/4 instead of pr-1/2.  [maurits]

- Let ontwikkel.cfg extend productie.cfg.  We used to extend
  devel.cfg, but we do not want to do development there, and do not
  want to extend nodejs.cfg as this does not work on the servers.
  [maurits]
