@@ -505,5 +505,20 @@
         description="Refresh portal_css and portal_javascript"
         handler="Products.minaraad.migration.cook_resources" />
   </gs:upgradeSteps>
+  <gs:upgradeSteps
+      source="5026"
+      destination="5027"
+      profile="Products.minaraad:default">
+    <gs:upgradeDepends
+        title="Apply CSS registry from our plone436 profile"
+        import_profile="Products.minaraad:plone436"
+        import_steps="cssregistry"/>
+    <!-- Cook resources must happen at the end of every upgrade!
+         Surely we have a css or javascript fix in every release. -->
+    <gs:upgradeStep
+        title="Cook resources"
+        description="Refresh portal_css and portal_javascript"
+        handler="Products.minaraad.migration.cook_resources" />
+  </gs:upgradeSteps>
 
 </configure>
