@@ -4,6 +4,11 @@ History of this buildout
 6.0.5 (unreleased)
 ------------------
 
+- Fixed cssregistry for production use.  Our main.css breaks on IE11
+  and lower when it is registered with a media setting.  Also,
+  reordered the css files so we get less combined files.  And include
+  them all with ``link`` instead of ``@import``.  [maurits]
+
 - varnish-clearcache: print if there is a failure.  [maurits]
 
 - varnishd: listen on telnet.  [maurits]
